usage-example/mutate-tags.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-digests
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: mutate-tags-to-digests
      match:
        any:
          - resources:
              kinds: ["Pod"]
      verifyImages:
        - imageReferences:
            - "*"
          mutateDigest: true
          verifyDigest: true
