usage-example/require-provenance.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-provenance
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: require-slsa-provenance
      match:
        any:
          - resources:
              kinds: ["Pod"]
      verifyImages:
        - imageReferences:
            - "ghcr.io/rossgovo/secure-docker-images*"
          type: SigstoreBundle
          attestations:
            - type: https://slsa.dev/provenance/v1
              attestors:
                - entries:
                    - keyless:
                        issuerRegExp: https://token\.actions\.githubusercontent\.com
                        subjectRegExp: https://github\.com/rossgovo/secure-docker-images/.github/workflows/.*@refs/tags/.*
                        rekor:
                          url: https://rekor.sigstore.dev
